--- a/test/index.html
+++ b/test/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>index page</h1>
-    <a href="/test/index.html"></a>
+    <h1>test page</h1>
+    <a href="/index.html"></a>
 </body>
 </html>
