--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>index page</h1>
-    <a href="/test/index.html"></a>
+    <a href="/test/index.html">to test</a>
 </body>
 </html>
